@@ -215,6 +215,9 @@ fix_move_after_sheathe = true
 ; After uniting with the shadow in level 12, the hidden floors will not appear until after the flashing stops.
 fix_hidden_floors_during_flashing = true
 
+; By jumping towards one of the bottom corners of the room and grabbing a ledge, you can teleport to the room above.
+fix_hang_on_teleport = true
+
 
 [CustomGameplay]
 ; Turn on customization options.
