@@ -244,6 +244,7 @@ static int global_ini_callback(const char *section, const char *name, const char
 		process_boolean("fix_offscreen_guards_disappearing", &fixes_saved.fix_offscreen_guards_disappearing);
 		process_boolean("fix_move_after_sheathe", &fixes_saved.fix_move_after_sheathe);
 		process_boolean("fix_hidden_floors_during_flashing", &fixes_saved.fix_hidden_floors_during_flashing);
+		process_boolean("fix_hang_on_teleport", &fixes_saved.fix_hang_on_teleport);
 	}
 
 	if (check_ini_section("CustomGameplay")) {
