@@ -491,6 +491,7 @@ void options_process_fixes(SDL_RWops* rw, rw_process_func_type process_func) {
 	process(fixes_options_replay.fix_offscreen_guards_disappearing);
 	process(fixes_options_replay.fix_move_after_sheathe);
 	process(fixes_options_replay.fix_hidden_floors_during_flashing);
+	process(fixes_options_replay.fix_hang_on_teleport);
 }
 
 void options_process_custom_general(SDL_RWops* rw, rw_process_func_type process_func) {
