@@ -495,3 +495,4 @@ DONE: Added option for disabling and enabling all customization options at once.
 DONE: Added option for changing the mods directory (where the game looks for custom levelsets).
 DONE: Added fix for hidden floors in level 12 not appearing until after the flashing stops.
 FIXED: Removed colored rectangles around hitpoints and the shadow, when using Brain's SNES graphics.
+FIXED: Fixed teleporting to the room above by grabbing a ledge (integer overflow bug).
